<resources>
    <string name="app_name">Quiz App</string>
    <string name="Biology">Biology Test</string>
    <string name="Enter">Enter your name</string>
    <string name="q1">Q1: Earth continents are constantly in motion</string>
    <string name="q2">Q2: Volcanic activity is common at transform plate boundries</string>
    <string name="q3">Q3: Earth has changed very little since its formation 4.5 billion years ago</string>
    <string name="q4">Q4: Plants receive their nutrients mainly from </string>
    <string name="q5">Q5: What the last name of famous biologist charles ? </string>
    <string name="q4.1">Plants</string>
    <string name="q4.2">Soil</string>
    <string name="q4.3">Sunlight</string>
    <string name="q4.4">Pluto</string>

</resources>
